--- a/bridge_priv_rs/Cargo.toml
+++ b/bridge_priv_rs/Cargo.toml
@@ -13,6 +13,10 @@ futures = "0.3"
 futures-util = "0.3"
 thiserror = "1.0"
 http = "0.2.12"
+log = "0.4.27"
+
+[dev-dependencies]
+tokio-test = "0.4"
 
 [build-dependencies]
 prost-build = "0.12"
