--- a/bridge_priv_rs/Cargo.toml
+++ b/bridge_priv_rs/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1.0", features = ["full"] }
 tokio-util = { version = "0.7", features = ["codec"] }
-reqwest = { version = "0.11", features = ["json", "stream"] }
+reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
 prost = "0.12"
 bytes = "1.0"
 futures = "0.3"
