--- a/bridge_priv_rs/Cargo.toml
+++ b/bridge_priv_rs/Cargo.toml
@@ -15,6 +15,7 @@ thiserror = "1.0"
 http = "0.2.12"
 log = "0.4.27"
 simple_logger = "5.0.0"
+ai_pin_logger = { git = "https://github.com/PenumbraOS/ai_pin_logger-rs.git" }
 
 [dev-dependencies]
 tokio-test = "0.4"
