--- a/bridge_priv_rs/Cargo.toml
+++ b/bridge_priv_rs/Cargo.toml
@@ -6,13 +6,14 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1.0", features = ["full"] }
 tokio-util = { version = "0.7", features = ["codec"] }
-reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
+reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
+reqwest-websocket = "0.5.0"
 prost = "0.12"
 bytes = "1.0"
 futures = "0.3"
 futures-util = "0.3"
 thiserror = "1.0"
-http = "0.2.12"
+http = "1.3"
 log = "0.4.27"
 simple_logger = "5.0.0"
 ai_pin_logger = { git = "https://github.com/PenumbraOS/ai_pin_logger-rs.git" }
