--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ coroutines = "1.8.1"
 robolectric = "4.14"
 okhttp = "4.12.0"
 systemJars = "1.0.2"
+appprocessmocks = "1.0.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -40,6 +41,7 @@ kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-cor
 androidx-core-testing = { group = "androidx.arch.core", name = "core-testing", version = "2.2.0" }
 robolectric = { group = "org.robolectric", name = "robolectric", version.ref = "robolectric" }
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
+appprocessmocks = { group = "com.github.PenumbraOS", name = "app_process-mocks", version.ref = "appprocessmocks" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
