--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,7 +15,7 @@ coroutines = "1.8.1"
 robolectric = "4.14"
 okhttp = "4.12.0"
 systemJars = "70382bc"
-appprocessmocks = "1.0.1"
+appprocessmocks = "1de5f75"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
